# RISCV-Emulator

./: .clang-format  .gitignore  .tok.txt.swp  CMakeGuide.txt  CMakeLists.txt  README.md  cmake_file_structure.txt  git_guide.tex  main  main.cpp  out.txt  structure.txt  test.cpp  test.s  todo.txt  tok.txt
.cache/clangd/index/: DRAM.cpp.2592628ECD20842D.idx  DRAM.cpp.DBE9293AE4D11581.idx  DRAM.hpp.2E9C73068B9AB549.idx  DRAM.hpp.4FEECB469452F79C.idx  I-format.cpp.4E2C7BDEED26DE23.idx  I-format.cpp.B0551502FE9ECE9F.idx  I-format.cpp.F0BFFB875B83F42C.idx  I-format.hpp.75A04AA50B37EAB4.idx  I-format.hpp.80A1C8DFFBE7FEFE.idx  I-format.hpp.F4EFC565FEA0FF6E.idx  Jis.cpp.25637300D269368A.idx  Jis.cpp.B406F3C5A54AC83F.idx  Jis.cpp.B4691F2B4DDEA189.idx  Jis.hpp.3FA01A85F1FCEFE5.idx  Jis.hpp.74752C21106D1FCA.idx  Jis.hpp.CBC7A97D92BADC22.idx  Jris.cpp.410217DABF0F006C.idx  Jris.cpp.87FEA05173CCC878.idx  Jris.cpp.F420BCAF5B6F3A29.idx  Jris.hpp.16383ED85BB70D7A.idx  Jris.hpp.41B7013A399ADFE3.idx  Jris.hpp.A27F828DD633CF4D.idx  R-format.cpp.7B3177D3DEE660DE.idx  R-format.cpp.CDF1E515558AF21D.idx  R-format.cpp.F720456B1D4D5FA2.idx  R-format.hpp.3485FFC968198B8C.idx  R-format.hpp.613E885CDA3AA7AB.idx  R-format.hpp.F676532CC7D7F733.idx  U-format.cpp.41C73ACA6724BE7F.idx  U-format.cpp.4B52AFAB34089E39.idx  U-format.cpp.5CEF74C73A114C7B.idx  U-format.hpp.63690D1245AF98EE.idx  U-format.hpp.9060AE5B9737F477.idx  U-format.hpp.C68E58F23A1FB5C1.idx  auipc.cpp.890AC9BF70001BD2.idx  auipc.cpp.EF9A4F6A3C830788.idx  auipc.cpp.F9267D9B65ECA839.idx  auipc.hpp.0918825AB5AD0E6F.idx  auipc.hpp.1A60950E1E356785.idx  auipc.hpp.7F53F31A64E3C7CC.idx  (+96 more)
components/: CMakeLists.txt  DRAM.cpp  DRAM.hpp  constants.hpp  cpu.cpp  cpu.hpp  tlb.hpp
components/cpu/: cpu.hpp
emulator/: CMakeLists.txt  emulator.cpp  emulator.hpp
emulator/components/: CMakeLists.txt  DRAM.cpp  DRAM.hpp  cpu.cpp  cpu.hpp
guide/: how-to-make-binary.txt  structure.txt  todo.txt  tok.txt
include/: CMakeLists.txt  DRAM.hpp  bits-manipulation.hpp  bus.hpp  constants.hpp  cpu.hpp  csr_reg.hpp  emulator.hpp  memory.hpp  registers.hpp  tlb.hpp
include/components/: DRAM.hpp  bits-manipulation.hpp  bus.hpp  constants.hpp  cpu.hpp  instructions.hpp  memory.hpp  tlb.hpp
include/components/instructions/: I-format.hpp  J.hpp  Jis.hpp  Jris.hpp  R-format.hpp  U-format.hpp  auipc.hpp  branch.hpp  csrs.hpp  ecall.hpp  imm-op.hpp  instructions.hpp  load.hpp  lui.hpp  op.hpp  store.hpp  system.hpp
include/emulator/: emulator.hpp
include/instructions/: I-format.hpp  Jis.hpp  Jris.hpp  R-format.hpp  U-format.hpp  auipc.hpp  branch.hpp  csrs.hpp  ecall.hpp  fence.hpp  imm-op.hpp  instructions.hpp  load.hpp  lui.hpp  op.hpp  store.hpp  system.hpp
interface/: CMakeLists.txt  take-binary-fIle.hpp  take-binary-file.cpp  take-binary-file.hpp
main/: CMakeLists.txt  main.cpp
object/: executable
src/: CMakeLists.txt  DRAM.cpp  bits-manipulation.cpp  bus.cpp  cpu.cpp  csr_reg.cpp  emulator.cpp  memory.cpp  registers.cpp
src/components/: .cpu.cpp.swp  DRAM.cpp  bits-manipulation.cpp  bus.cpp  cpu.cpp  instructions.cpp  memory.cpp
src/components/instructions/: I-format.cpp  Jis.cpp  Jris.cpp  R-format.cpp  U-format.cpp  auipc.cpp  branch.cpp  csrs.cpp  imm-op.cpp  instructions.cpp  load.cpp  lui.cpp  op.cpp  store.cpp  system.cpp
src/emulator/: emulator.cpp
src/instructions/: I-format.cpp  Jis.cpp  Jris.cpp  R-format.cpp  U-format.cpp  auipc.cpp  branch.cpp  csrs.cpp  imm-op.cpp  instructions.cpp  load.cpp  lui.cpp  op.cpp  store.cpp  system.cpp
test/: .gitignore  Makefile  README.md  a.out  add-addi  check_correctness.py  gen_test.py  out.txt  right_imp.py  test  test.c  test.cpp  test.s  testbinfile.c  testbinfile.s
test/dump_files/: rv32mi-p-breakpoint.dump  rv32mi-p-csr.dump  rv32mi-p-lw-misaligned.dump  rv32mi-p-ma_fetch.dump  rv32mi-p-sw-misaligned.dump  rv32mi-p-zicntr.dump  rv32si-p-csr.dump  rv32si-p-dirty.dump  rv32si-p-wfi.dump  rv32uc-v-rvc.dump  rv32ud-p-fadd.dump  rv32ud-p-fcmp.dump  rv32ud-p-fcvt_w.dump  rv32ud-p-fdiv.dump  rv32ud-v-fadd.dump  rv32ud-v-fclass.dump  rv32ud-v-fcvt.dump  rv32ud-v-fcvt_w.dump  rv32ud-v-fdiv.dump  rv32ud-v-fmadd.dump  rv32ud-v-ldst.dump  rv32uf-v-fadd.dump  rv32uf-v-fclass.dump  rv32uf-v-move.dump  rv32uf-v-recoding.dump  rv32uzfh-p-fclass.dump  rv32uzfh-p-fcmp.dump  rv32uzfh-p-fcvt.dump  rv32uzfh-p-fdiv.dump  rv32uzfh-v-fcmp.dump  rv64mi-p-access.dump  rv64mi-p-breakpoint.dump  rv64mi-p-illegal.dump  rv64mi-p-lw-misaligned.dump  rv64mi-p-ma_addr.dump  rv64mi-p-ma_fetch.dump  rv64mi-p-mcsr.dump  rv64mi-p-sbreak.dump  rv64mi-p-sw-misaligned.dump  rv64mi-p-zicntr.dump  (+87 more)
test/riscv-tests/benchmarks/: dhrystone.riscv  median.riscv  memcpy.riscv  mm.riscv  mt-matmul.riscv  mt-memcpy.riscv  mt-vvadd.riscv  multiply.riscv  pmp.riscv  qsort.riscv  rsort.riscv  spmv.riscv  towers.riscv  vec-daxpy.riscv  vec-memcpy.riscv  vec-sgemm.riscv  vec-strcmp.riscv  vvadd.riscv
test/riscv-tests/isa/: rv32mi-p-breakpoint  rv32mi-p-csr  rv32mi-p-illegal  rv32mi-p-illegal.dump  rv32mi-p-lh-misaligned  rv32mi-p-lh-misaligned.dump  rv32mi-p-lw-misaligned  rv32mi-p-ma_addr  rv32mi-p-ma_addr.dump  rv32mi-p-ma_fetch  rv32mi-p-mcsr  rv32mi-p-mcsr.dump  rv32mi-p-sbreak  rv32mi-p-sbreak.dump  rv32mi-p-scall  rv32mi-p-scall.dump  rv32mi-p-sh-misaligned  rv32mi-p-sh-misaligned.dump  rv32mi-p-shamt  rv32mi-p-shamt.dump  rv32mi-p-sw-misaligned  rv32mi-p-zicntr  rv32si-p-csr  rv32si-p-dirty  rv32si-p-ma_fetch  rv32si-p-ma_fetch.dump  rv32si-p-sbreak  rv32si-p-sbreak.dump  rv32si-p-scall  rv32si-p-scall.dump  rv32si-p-wfi  rv32ua-p-amoadd_w  rv32ua-p-amoand_w  rv32ua-p-amomax_w  rv32ua-p-amomaxu_w  rv32ua-p-amomin_w  rv32ua-p-amominu_w  rv32ua-p-amoor_w  rv32ua-p-amoswap_w  rv32ua-p-amoxor_w  (+583 more)
